RESOLVED FIXED278781
Some `fast/xpath` tests hit an assertion in release with `ENABLE_ASSERTS=1`
https://bugs.webkit.org/show_bug.cgi?id=278781
Summary Some `fast/xpath` tests hit an assertion in release with `ENABLE_ASSERTS=1`
Vitaly Dyackhov
Reported 2024-08-28 03:55:25 PDT
Tests: fast/xpath/4XPath/Core/test_parser.html fast/xpath/attribute-node-predicate.html fast/xpath/document-order.html fast/xpath/id-path.html fast/xpath/position.html fast/xpath/preceding-axis.xhtml fast/xpath/py-dom-xpath/abbreviations.html fast/xpath/py-dom-xpath/axes.html fast/xpath/py-dom-xpath/data.html fast/xpath/py-dom-xpath/expressions.html fast/xpath/py-dom-xpath/functions.html fast/xpath/py-dom-xpath/nodetests.html fast/xpath/py-dom-xpath/paths.html fast/xpath/py-dom-xpath/predicates.html fast/xpath/text-nodes.html fast/xpath/union-context-node.xhtml fast/xpath/xpath-functional-test.html Stack trace: STDERR: ASSERTION FAILED: parentNodes.isEmpty() STDERR: /home/vitaly/WebKit/Source/WebCore/xml/XPathNodeSet.cpp(136) : void WebCore::XPath::sortBlock(unsigned int, unsigned int, WTF::Vector<WTF::Vector<WebCore::Node*> >&, bool) STDERR: 1 0x7f28c42deba8 WebCore::XPath::sortBlock(unsigned int, unsigned int, WTF::Vector<WTF::Vector<WebCore::Node*, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, bool) STDERR: 2 0x7f28c42e02fe WebCore::XPath::NodeSet::sort() const STDERR: 3 0x7f28c42e1dbb WebCore::XPathResult::convertTo(unsigned short) STDERR: 4 0x7f28c42d02a8 WebCore::XPathExpression::evaluate(WebCore::Node&, unsigned short, WebCore::XPathResult*) STDERR: 5 0x7f28c42d067d WebCore::XPathEvaluator::evaluate(WTF::String const&, WebCore::Node&, WTF::RefPtr<WebCore::XPathNSResolver, WTF::RawPtrTraits<WebCore::XPathNSResolver>, WTF::DefaultRefDerefTraits<WebCore::XPathNSResolver> >&&, unsigned short, WebCore::XPathResult*) STDERR: 6 0x7f28c29e65fe WebCore::Document::evaluate(WTF::String const&, WebCore::Node&, WTF::RefPtr<WebCore::XPathNSResolver, WTF::RawPtrTraits<WebCore::XPathNSResolver>, WTF::DefaultRefDerefTraits<WebCore::XPathNSResolver> >&&, unsigned short, WebCore::XPathResult*) STDERR: 7 0x7f28c0e9093f WebCore::jsDocumentPrototypeFunction_evaluate(JSC::JSGlobalObject*, JSC::CallFrame*) STDERR: 8 0x7f274fe10038 ???
Attachments
Vitaly Dyackhov
Comment 1 2024-08-28 03:59:54 PDT
EWS
Comment 2 2024-08-28 07:50:32 PDT
Committed 282842@main (54db0db4919d): <https://commits.webkit.org/282842@main> Reviewed commits have been landed. Closing PR #32818 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-28 07:51:13 PDT
Vitaly Dyackhov
Comment 4 2024-08-30 08:03:03 PDT
EWS
Comment 5 2024-08-30 14:53:36 PDT
Committed 282992@main (7ce6a1c447e1): <https://commits.webkit.org/282992@main> Reviewed commits have been landed. Closing PR #32940 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.