Cherry-pick 282842@main (54db0db4919d). https://bugs.webkit.org/show_bug.cgi?id=278781

Some `fast/xpath` tests hit an assertion in release with `ENABLE_ASSERTS=1`
    https://bugs.webkit.org/show_bug.cgi?id=278781

    Reviewed by Anne van Kesteren.

    The code assumes that `ASSERT()` macro is only enabled in debug builds,
    but it can be enabled in release builds too using `ENABLE_ASSERTS=1`.

    * Source/WebCore/xml/XPathNodeSet.cpp:
    (WebCore::XPath::sortBlock):

    Canonical link: https://commits.webkit.org/282842@main

Canonical link: https://commits.webkit.org/282416.39@webkitglib/2.46